# TreasureHuntBench

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  STATUS.md  TreasureHuntBenchDescription.md  commit_list.md  pyproject.toml  setup.py
benchmark/test/: INDEX.md
benchmark/training/: INDEX.md  answers.json
benchmark/validation/: INDEX.md
docs/: getting_started.md  scoring_and_traces.md  splits_and_security.md  world_format.md
scripts/: generate_benchmark.py  publish_benchmark.py  write_world_index.py  yt_auth.py
tests/: families_common.py  test_artifacts.py  test_baselines.py  test_captures.py  test_cli.py  test_core_naming.py  test_core_rng_tokens.py  test_core_schemas_cache.py  test_decoys.py  test_e2e.py  test_eval.py  test_f01_basic.py  test_f02_website.py  test_f03_api.py  test_f04_multirepo.py  test_f05_youtube.py  test_f06_multilingual.py  test_f07_encoded.py  test_f08_memory.py  test_f09_decoys.py  test_f10_grand.py  test_github_pub.py  test_graphs.py  test_instructions.py  test_scaffold.py  test_sources.py  test_validators.py  test_youtube_pub.py
thb/: cli.py  worldgen.py
thb/artifacts/: archive.py  captures.py  encodings.py  files.py  multilingual.py  sqlite_gen.py
thb/baselines/: grep_baseline.py  oracle_agent.py  search_only.py
thb/core/: cache.py  naming.py  rng.py  schemas.py  tokens.py
thb/eval/: scoring.py  trace.py
thb/families/: f01_basic.py  f02_website.py  f03_api.py  f04_multirepo.py  f05_youtube.py  f06_multilingual.py  f07_encoded.py  f08_memory.py  f09_decoys.py  f10_grand.py  registry.py
worlds/: INDEX.md
(+91 files in other folders)
